--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<h1>Match with your future cat by food preferences!</h1>
+	<h1>Match with your <span class='strongHeader'> purrrfect </span> cat by food preferences!</h1>
 
 	<h2>Now, pick your favorite food and I'll tell you which cat matches you best!</h2>
 	
